tooling/nargo_cli/tests/snapshots/execute__tests__regression_4124_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "256990723310408431",
  "abi": {
    "parameters": [
      {
        "name": "value",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUwQ6CMAwdMKMTuYgX/YoSIHDk4I8sEr5jn65L2qxppgfZXkK6pd1r32NZoQIKjFrsVaRmwQj70CXkguigv0A1D4wGY8nyVUKxRvRNyT/DMJqIvoTz9wY5c/pDnBn44Yg8Txf4pRaPBvf8DtGZ0+e7qLBucG3EmRz/NqP30Ebmp141ar0JrSXzJ9UcXJvHIaK7EDmqbcV8OpNXV8arRK9ahXdEu/T9pxmA+lYu+EAecGiW5/V33J+/6Fj+nHObbLf1drOjXdfhZaVPHvxOvQGanh0hfQYAAA==",
  "debug_symbols": "lZDLCsMgEEX/ZdYuTKhpml8JJZhkEgTR4KNQxH/vWLqQ7twMc4c5d3ES7LjGc1HmsB6mOYG2mwzKGkopM1id0lqdS30GXkZ3+/77S5oSfZAuwPQQnAGanbZhJP5QGmESPD8ZdKKZGJqJezMxthGZ0ks6JVeNP0lHNFvlLLwv/NN3ObvhHh0WkZVDmnPPWS+olqo/",
  "file_map": {
    "50": {
      "source": "use std::option::Option;\n\ntrait MyDeserialize<let N: u32> {\n    fn deserialize(fields: [Field; N]) -> Self;\n}\n\nimpl MyDeserialize<1> for Field {\n    fn deserialize(fields: [Field; 1]) -> Self {\n        fields[0]\n    }\n}\n\npub fn storage_read<let N: u32>() -> [Field; N] {\n    std::mem::zeroed()\n}\n\nstruct PublicMutable<T> {\n    storage_slot: Field,\n}\n\nimpl<T> PublicMutable<T> {\n    pub fn new(storage_slot: Field) -> Self {\n        assert(storage_slot != 0, \"Storage slot 0 not allowed. Storage slots must start from 1.\");\n        PublicMutable { storage_slot }\n    }\n\n    pub fn read<let T_SERIALIZED_LEN: u32>(_self: Self) -> T\n    where\n        T: MyDeserialize<T_SERIALIZED_LEN>,\n    {\n        // storage_read returns slice here\n        let fields: [Field; T_SERIALIZED_LEN] = storage_read();\n        T::deserialize(fields)\n    }\n}\n\nfn main(value: Field) {\n    let ps: PublicMutable<Field> = PublicMutable::new(27);\n\n    // error here\n    assert(ps.read() == value);\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/regression_4124/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
